-> Resolved the search filter issue in the discharged patient list. -> Added validations for each step in the discharge process. -> Working on updating patient records after successful discharge.

--- a/10.2.0/angular/src/app/doctors/patient/patient.component.html
+++ b/10.2.0/angular/src/app/doctors/patient/patient.component.html
@@ -162,7 +162,7 @@
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li *ngIf="record.discharge_Status!=0"
+                                                <li *ngIf="record.discharge_Status !== 0 && record.discharge_Status < 5"
                                                     (click)="gotoDischargeSummaryPage(selectedRecord.id)">
                                                     <i class="fa-solid fa-right-from-bracket"></i>Discharge Process
                                                 </li>
