add view medicine purchase invoice recipt

--- a/10.2.0/angular/src/app/pharmacist/create-purchase-invoice/create-purchase-invoice.component.html
+++ b/10.2.0/angular/src/app/pharmacist/create-purchase-invoice/create-purchase-invoice.component.html
@@ -6,23 +6,21 @@
     <div class="row">
       <div class="col-md-6 d-flex flex-column">
         <label for="invoiceNo">Invoice No</label>
-        <input pInputText [(ngModel)]="invoice.invoiceNo" name="invoiceNo"
-               placeholder="Enter invoice number" class="w-100" required />
+        <input pInputText [(ngModel)]="invoice.invoiceNo" name="invoiceNo" placeholder="Enter invoice number"
+          class="w-100" required />
       </div>
       <div class="col-md-6 d-flex flex-column">
         <label for="invoiceDate">Invoice Date</label>
-        <p-datepicker [(ngModel)]="invoice.invoiceDate" name="invoiceDate"
-                    [maxDate]="today" dateFormat="yy-mm-dd"
-                    placeholder="Select invoice date"  required>
+        <p-datepicker [(ngModel)]="invoice.invoiceDate" name="invoiceDate" [maxDate]="today" dateFormat="yy-mm-dd"
+          placeholder="Select invoice date" required>
         </p-datepicker>
       </div>
     </div>
-
     <div class="row mt-3">
       <div class="col-md-12 d-flex flex-column">
         <label for="supplierName">Supplier Name</label>
-        <input pInputText [(ngModel)]="invoice.supplierName" name="supplierName"
-               placeholder="Enter supplier name" class="w-100" required />
+        <input pInputText [(ngModel)]="invoice.supplierName" name="supplierName" placeholder="Enter supplier name"
+          class="w-100" required />
       </div>
     </div>
 
@@ -35,43 +33,83 @@
         <button type="button" pButton label="Add Item" icon="pi pi-plus" (click)="addItem()"></button>
       </div>
     </div>
+     <div class="purchase-items-container mt-2">
+    <div class="card mt-2" *ngFor="let item of invoice.items; let i = index">
+      <div class="card-body">
+        <div class="col-md-12 d-flex justify-content-end mt-1">
+          <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger" (click)="removeItem(i)" />
+        </div>
+        <div class="row mt-2">
 
-    <div *ngFor="let item of invoice.items; let i = index" class="row mt-2">
-      <div class="col-md-3 d-flex flex-column">
-        <label>Medicine</label>
-        <p-dropdown [(ngModel)]="item.medicineMasterId" name="medicineMasterId{{i}}" [options]="medicineOptions"
-                    optionLabel="name" optionValue="id" placeholder="Select medicine" [filter]="true" required>
-        </p-dropdown>
+          <!-- Medicine -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Medicine</label>
+            <p-dropdown [(ngModel)]="item.medicineMasterId" name="medicineMasterId{{i}}" [options]="medicineOptions"
+              optionLabel="name" optionValue="id" placeholder="Select medicine" [filter]="true" required>
+            </p-dropdown>
+          </div>
+
+          <!-- Batch No -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Batch No</label>
+            <input pInputText [(ngModel)]="item.batchNo" name="batchNo{{i}}" placeholder="Enter batch no" required />
+          </div>
+
+          <!-- Expiry Date -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Expiry Date</label>
+            <p-calendar [(ngModel)]="item.expiryDate" name="expiryDate{{i}}" [minDate]="today" dateFormat="yy-mm-dd"
+              placeholder="Select expiry date" required></p-calendar>
+
+            <small class="text-danger" *ngIf="isExpiryInvalid(item) && purchaseInvoiceForm.submitted">
+              Expiry date is required and must be in the future
+            </small>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <!-- Qty -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Qty</label>
+            <p-inputNumber [(ngModel)]="item.quantity" name="quantity{{i}}" [min]="1" [max]="10000"
+              (onInput)="updateInvoiceTotal()" required></p-inputNumber>
+          </div>
+
+          <!-- Purchase Price -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Purchase Price</label>
+            <p-inputNumber [(ngModel)]="item.purchasePrice" name="purchasePrice{{i}}" [min]="1" [mode]="'decimal'"
+              (onInput)="updateInvoiceTotal()" required [minFractionDigits]="2" [maxFractionDigits]="2"></p-inputNumber>
+            <small class="text-danger" *ngIf="item.purchasePrice <= 0 && purchaseInvoiceForm.submitted">
+              Purchase price must be greater than 0
+            </small>
+          </div>
+
+          <!-- Selling Price -->
+          <div class="col-md-4 d-flex flex-column">
+            <label>Selling Price</label>
+            <p-inputNumber [(ngModel)]="item.sellingPrice" name="sellingPrice{{i}}" [min]="1" [mode]="'decimal'"
+              required [minFractionDigits]="2" [maxFractionDigits]="2"></p-inputNumber>
+            <small class="text-danger" *ngIf="item.sellingPrice <= 0 && purchaseInvoiceForm.submitted">
+              Selling price must be greater than 0
+            </small>
+            <small class="text-danger"
+              *ngIf="item.sellingPrice < item.purchasePrice && purchaseInvoiceForm.controls['sellingPrice'+i]?.dirty">
+              Selling price cannot be less than purchase price
+            </small>
+          </div>
+        </div>
       </div>
-      <div class="col-md-2 d-flex flex-column">
-        <label>Batch No</label>
-        <input pInputText [(ngModel)]="item.batchNo" name="batchNo{{i}}" placeholder="Enter batch no" required />
-      </div>
-      <div class="col-md-2 d-flex flex-column">
-        <label>Expiry Date</label>
-        <p-datepicker [(ngModel)]="item.expiryDate" name="expiryDate{{i}}"
-                    [minDate]="today" dateFormat="yy-mm-dd"
-                    placeholder="Select expiry date"></p-datepicker>
-      </div>
-      <br>
-      <div class="col-md-1 d-flex flex-column">
-        <label>Qty</label>
-        <p-inputNumber [(ngModel)]="item.quantity" name="quantity{{i}}" [min]="1" [max]="10000" required></p-inputNumber>
-      </div>
-      <div class="col-md-2 d-flex flex-column">
-        <label>Purchase Price</label>
-        <p-inputNumber [(ngModel)]="item.purchasePrice" name="purchasePrice{{i}}" [min]="0" [mode]="'decimal'" required></p-inputNumber>
-      </div>
-      <div class="col-md-2 d-flex flex-column">
-        <label>Selling Price</label>
-        <p-inputNumber [(ngModel)]="item.sellingPrice" name="sellingPrice{{i}}" [min]="0" [mode]="'decimal'" required></p-inputNumber>
-      </div>
-      <div class="col-md-12 d-flex justify-content-end mt-1">
-        <button type="button" pButton icon="pi pi-trash" class="p-button-danger" (click)="removeItem(i)"></button>
+    </div>
+    </div>
+    <hr>
+    <!-- Grand Total -->
+    <div class="row mt-3">
+      <div class="col-md-12 d-flex justify-content-end">
+        <h5>Grand Total: {{ invoice.totalAmount | number:'1.2-2' }}</h5>
       </div>
     </div>
   </div>
 
   <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
-                    (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
+    (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
 </form>
