--- a/10.2.0/angular/src/app/pharmacist/edit-purchase-invoice/edit-purchase-invoice.component.html
+++ b/10.2.0/angular/src/app/pharmacist/edit-purchase-invoice/edit-purchase-invoice.component.html
@@ -1,1 +1,113 @@
-<p>edit-purchase-invoice works!</p>
+<form class="form-horizontal" autocomplete="off" #purchaseInvoiceForm="ngForm" (ngSubmit)="save()">
+    <abp-modal-header title="Edit Purchase Invoice" (onCloseClick)="bsModalRef.hide()"></abp-modal-header>
+
+    <div class="modal-body">
+        <!-- Invoice Info -->
+        <div class="row">
+            <div class="col-md-6 d-flex flex-column">
+                <label for="invoiceNo">Invoice No</label>
+                <input pInputText [(ngModel)]="invoice.invoiceNo" name="invoiceNo" placeholder="Enter invoice number"
+                    class="w-100" required />
+            </div>
+            <!-- Invoice Date -->
+            <div class="col-md-6 d-flex flex-column">
+                <label for="invoiceDate">Invoice Date</label>
+                <p-calendar [(ngModel)]="uiInvoiceDate" (ngModelChange)="onInvoiceDateChange($event)" name="invoiceDate"
+                    [maxDate]="today" dateFormat="yy-mm-dd" placeholder="Select invoice date" required>
+                </p-calendar>
+            </div>
+
+        </div>
+
+        <div class="row mt-3">
+            <div class="col-md-12 d-flex flex-column">
+                <label for="supplierName">Supplier Name</label>
+                <input pInputText [(ngModel)]="invoice.supplierName" name="supplierName"
+                    placeholder="Enter supplier name" class="w-100" required />
+            </div>
+        </div>
+
+        <hr>
+
+        <!-- Purchase Items -->
+        <div class="row mt-2">
+            <div class="col-md-12 d-flex justify-content-between align-items-center">
+                <h5>Purchase Items</h5>
+                <button type="button" pButton label="Add Item" icon="pi pi-plus" (click)="addItem()"></button>
+            </div>
+        </div>
+
+        <!-- Purchase Items List -->
+        <div class="purchase-items-container mt-2">
+            <div class="card mb-2" *ngFor="let item of invoice.items; let i = index">
+                <div class="card-body">
+                    <div class="col-md-12 d-flex justify-content-end mt-1">
+                        <p-button icon="pi pi-times" [rounded]="true" [text]="true" severity="danger"
+                            (click)="removeItem(i)"></p-button>
+                    </div>
+
+                    <div class="row mt-2">
+                        <!-- Medicine -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Medicine</label>
+                            <p-dropdown [(ngModel)]="item.medicineMasterId" name="medicineMasterId{{i}}"
+                                [options]="medicineOptions" optionLabel="name" optionValue="id"
+                                placeholder="Select medicine" [filter]="true" required></p-dropdown>
+                        </div>
+
+                        <!-- Batch No -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Batch No</label>
+                            <input pInputText [(ngModel)]="item.batchNo" name="batchNo{{i}}"
+                                placeholder="Enter batch no" required />
+                        </div>
+
+                        <!-- Expiry Date -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Expiry Date</label>
+                            <p-calendar [(ngModel)]="uiExpiryDates[i]" (ngModelChange)="onExpiryDateChange(i, $event)"
+                                name="expiryDate{{i}}" [minDate]="today" dateFormat="yy-mm-dd"
+                                placeholder="Select expiry date" required></p-calendar>
+                        </div>
+                    </div>
+
+                    <div class="row mt-2">
+                        <!-- Qty -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Qty</label>
+                            <p-inputNumber [(ngModel)]="item.quantity" name="quantity{{i}}" [min]="1" [max]="10000"
+                                (onInput)="updateInvoiceTotal()" required></p-inputNumber>
+                        </div>
+
+                        <!-- Purchase Price -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Purchase Price</label>
+                            <p-inputNumber [(ngModel)]="item.purchasePrice" name="purchasePrice{{i}}" [min]="1"
+                                [mode]="'decimal'" (onInput)="updateInvoiceTotal()" [minFractionDigits]="2" [maxFractionDigits]="2" required></p-inputNumber>
+                        </div>
+
+                        <!-- Selling Price -->
+                        <div class="col-md-4 d-flex flex-column">
+                            <label>Selling Price</label>
+                            <p-inputNumber [(ngModel)]="item.sellingPrice" name="sellingPrice{{i}}" [min]="1"
+                                [mode]="'decimal'" required [minFractionDigits]="2" [maxFractionDigits]="2"></p-inputNumber>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <hr>
+
+        <!-- Grand Total -->
+        <div class="row mt-3">
+            <div class="col-md-12 d-flex justify-content-end">
+                <h5>Grand Total: {{ invoice.totalAmount | number:'1.2-2' }}</h5>
+            </div>
+        </div>
+    </div>
+
+    <abp-modal-footer [cancelDisabled]="saving" [saveDisabled]="!isFormValid || saving"
+        (onCancelClick)="bsModalRef.hide()"></abp-modal-footer>
+</form>
