--- a/10.2.0/angular/src/app/pharmacist/purchase-invoice-list/purchase-invoice-list.component.html
+++ b/10.2.0/angular/src/app/pharmacist/purchase-invoice-list/purchase-invoice-list.component.html
@@ -30,16 +30,13 @@
                     <i class="fas fa-search"></i>
                   </button>
                 </div>
-                <input type="text" class="form-control" name="keyword"
-                       [placeholder]="'SearchWithThreeDot' | localize"
-                       [(ngModel)]="keyword"
-                       (keyup.enter)="list()" />
+                <input type="text" class="form-control" name="keyword" [placeholder]="'SearchWithThreeDot' | localize"
+                  [(ngModel)]="keyword" (keyup.enter)="list()" />
                 <div class="input-group-append">
                   <button type="button" class="btn btn-default"
-                          (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                    <i class="fas"
-                       [class.fa-angle-up]="advancedFiltersVisible"
-                       [class.fa-angle-down]="!advancedFiltersVisible"></i>
+                    (click)="advancedFiltersVisible = !advancedFiltersVisible">
+                    <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
+                      [class.fa-angle-down]="!advancedFiltersVisible"></i>
                   </button>
                 </div>
               </div>
@@ -54,8 +51,7 @@
                     <div class="form-group row">
                       <label class="col-md-4 col-form-label">Supplier</label>
                       <div class="col-md-8">
-                        <input type="text" class="form-control"
-                               [(ngModel)]="supplierName" name="supplierName" />
+                        <input type="text" class="form-control" [(ngModel)]="supplierName" name="supplierName" />
                       </div>
                     </div>
                   </div>
@@ -63,8 +59,8 @@
                     <div class="form-group row">
                       <label class="col-md-4 col-form-label">Invoice Date</label>
                       <div class="col-md-8">
-                        <p-calendar [(ngModel)]="invoiceDate" name="invoiceDate"
-                                    [showIcon]="true" [maxDate]="maxDate"></p-calendar>
+                        <p-calendar [(ngModel)]="invoiceDate" name="invoiceDate" [showIcon]="true"
+                          [maxDate]="maxDate"></p-calendar>
                       </div>
                     </div>
                   </div>
@@ -84,11 +80,9 @@
 
         <!-- 📋 Table -->
         <div class="card-body table-responsive table-striped table-bordered">
-          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)"
-                   [value]="primengTableHelper.records"
-                   rows="{{ primengTableHelper.defaultRecordsCountPerPage }}"
-                   [paginator]="false" [lazy]="true"
-                   [tableStyle]="{ 'min-width': '50rem' }">
+          <p-table #dataTable sortMode="multiple" (onLazyLoad)="list($event)" [value]="primengTableHelper.records"
+            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '50rem' }">
             <ng-template pTemplate="header">
               <tr>
                 <th pSortableColumn="invoiceNo">Invoice No <p-sortIcon field="invoiceNo"></p-sortIcon></th>
@@ -103,11 +97,11 @@
               <tr>
                 <td>{{ record.invoiceNo }}</td>
                 <td>{{ record.supplierName }}</td>
-                <td>{{ record.invoiceDate | date:'shortDate' }}</td>
+                <td>{{ record.invoiceDate | date: 'dd/MM/yyyy' }}</td>
                 <td>{{ record.totalAmount | number:'1.2-2' }}</td>
                 <td>
                   <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                          (click)="rowMenu.toggle($event); selectedRecord = record"></button>
+                    (click)="rowMenu.toggle($event); selectedRecord = record"></button>
                   <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                     <ul class="custom-overlay-menu">
                       <li (click)="editInvoice(selectedRecord)">
@@ -115,6 +109,9 @@
                       </li>
                       <li (click)="delete(selectedRecord)">
                         <i class="pi pi-trash"></i> Delete
+                      </li>
+                      <li (click)="viewInvoice(selectedRecord)">
+                        <i class="pi pi-eye"></i> View
                       </li>
                     </ul>
                   </p-overlayPanel>
@@ -138,13 +135,10 @@
             </div>
             <div class="col-sm-8 col-12">
               <div class="float-sm-right m-auto">
-                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage"
-                             #paginator
-                             (onPageChange)="list($event)"
-                             [totalRecords]="primengTableHelper.totalRecordsCount"
-                             [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                             [showCurrentPageReport]="true"
-                             [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                  (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                  [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+                  [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
                 </p-paginator>
               </div>
             </div>
