-> Worked on creating statistical charts for Patients, Appointments, Doctors, and Nurses to display on the dashboard. -> Developed an API to fetch the complete dashboard data in a single call during page load. -> Integrated the newly added Appointment Request list and implemented a Top Departments chart on the dashboard.

--- a/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.html
+++ b/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.html
@@ -77,7 +77,7 @@
                   </td>
                   <td>
                     <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                      (click)="rowMenu.toggle($event); selectedRecord = record">
+                      (click)="rowMenu.toggle($event); selectedRecord = record" *ngIf="!idDischarged(record.status)">
                     </button>
                     <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                       <ul class="custom-overlay-menu">
